// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all tools creates a foreman.toml 1`] = `
"[tools]
darklua = { github = "seaofvoices/darklua", version = "=0.16.0"}
luau-lsp = { github = "JohnnyMorganz/luau-lsp", version = "=1.47.0"}
lune = { github = "lune-org/lune", version = "=0.9.3"}
mantle = { github = "blake-mealey/mantle", version = "=0.11.18"}
rojo = { github = "rojo-rbx/rojo", version = "=7.5.1"}
run-in-roblox = { github = "rojo-rbx/run-in-roblox", version = "=0.3.0"}
selene = { github = "Kampfkarren/selene", version = "=0.28.0"}
stylua = { github = "JohnnyMorganz/StyLua", version = "=2.1.0"}
tarmac = { github = "rojo-rbx/tarmac", version = "=0.7.5"}
"
`;

exports[`default tools creates a foreman.toml 1`] = `
"[tools]
darklua = { github = "seaofvoices/darklua", version = "=0.16.0"}
luau-lsp = { github = "JohnnyMorganz/luau-lsp", version = "=1.47.0"}
selene = { github = "Kampfkarren/selene", version = "=0.28.0"}
stylua = { github = "JohnnyMorganz/StyLua", version = "=2.1.0"}
"
`;
